# MSCL

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/include/: player.hpp  songs.hpp  utils.h
demo/src/: demo.cpp  main.cpp  player_xaudio2.cpp
mscl/: CMakeLists.txt
mscl/include/: mscl.h
mscl/src/: mscl.c
mscl_demo/: CMakeLists.txt
mscl_demo/include/: instruments.hpp  songs.hpp
mscl_demo/include/songs/: Demo1.hpp  Demo2a.hpp  Demo2b.hpp  DemoFM.hpp  FM.hpp  Ghosts.hpp  HappySynth.hpp  Menuet.hpp
mscl_demo/src/: main.cpp
mscl_player/: CMakeLists.txt
mscl_player/include/: mscl_gui.hpp  mscl_player.hpp
mscl_player/src/: gui.cpp  utils.hpp  xaudio2.cpp
